# BattleshipGraphicsProjects

./: .gitattributes  .gitignore  pytest.ini
Docs/: COMFYUI_SETUP_PROMPT.md  COMFYUI_WORKFLOW_OPTIMIZATION_PROMPT.md  README.md
Docs/2D_Pipeline/: 2D_Pipeline_Architecture.md  2D_Pipeline_Design.md  DOCUMENTATION_STRUCTURE.md
Docs/Strategy/: COMFYUI_NAVAL_3D_STRATEGY.md  EXECUTIVE_SUMMARY.md  LEVERAGE_EXISTING_3D_MODELS.md
ProjectBroadside/BattleshipMaker/: .gitignore  GEMINI_2.5_FLASH_BEST_PRACTICES.md  GeminiBounding.md  Prompt.md  ProposedChange.md  framework_proposal.md  requirements.txt  worklog.md
ProjectBroadside/BattleshipMaker2/: .gitignore  README.md
ProjectBroadside/BattleshipMaker2/01-image-generation/: README.md  config.py  config.yaml  image_generator.py  main.py  pyproject.toml  requirements.txt  test_live_api.py
ProjectBroadside/BattleshipMaker2/01-image-generation/generated_images/gemini_api_test/: bismarck_0000.json  bismarck_0001.json  bismarck_0002.json
ProjectBroadside/HullCutter/: README.md
ProjectBroadside/MCPUnityRockstar/: .gitignore  CHANGELOG.md  MCP Resource Debugging Investigation_.md  README.md  glama.json  package.json
ProjectBroadside/PDFScans/: FLORENCE_2_WARSHIP_EXTRACTION_PLAN.md  README.md  pyproject.toml
ProjectBroadside/PDFScans/src/warship_extractor/config/: settings.py
ProjectBroadside/PDFScans/src/warship_extractor/core/: model_manager.py  pdf_processor.py
ProjectBroadside/PDFScans/src/warship_extractor/detection/: prompt_strategies.py
ProjectBroadside/PDFScans/src/warship_extractor/pipeline/: extraction_pipeline.py
ProjectBroadside/PDFScans/src/warship_extractor/processing/: image_processor.py
ProjectBroadside/PDFScans/src/warship_extractor/utils/: logger.py  visualization.py
ProjectBroadside/PDFScans/tests/: conftest.py
ProjectBroadside/PDFScans/tests/integration/: __init__.py  test_pipeline_integration.py
ProjectBroadside/PDFScans/tests/unit/: test_cli.py  test_image_processor.py  test_logger.py  test_model_manager.py  test_nms_filter.py  test_pdf_processor.py  test_pipeline.py  test_prompt_strategies.py
src/warship_extractor/: __init__.py  (+1 more)
tests/: __init__.py
(+145 files in other folders)
